# HydrogenLib

./: !#pyproject.toml  .gitignore  .pypirc  LICENSE  LICENSE.md  License.md  NewLicense_CN.md  NewLicense_EN.md  README.md  get-requirements.py  pyproject.toml  requirements.txt  setup.py  setup_the_setup.py  test.py  test_2.py  test_3.py  test_5.py  upload.ps1  upload.py
.github/workflows/: python-publish.yml
Hydrogen/: Const.py  Database.py  Encryio.py  File.py  FileSystemMapper.py  Json.py  Network.py  OtherClasses.py  OutputPlus.py  PipePlus.py  SocketPlus.py  StructPlus.py  SysPlus.py  ThreadingPlus.py  Win32Window.py  WinregPlus.py  _PlatFormGetter.py  __init__.py  _qstruct.old.py
Hydrogen.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Hydrogen/BoardcastRoom/: socket.py
Hydrogen/Classes/: Inf.py  Namespace.py  NetworkPackages.py  Null.py  ObjectFunc.py
Hydrogen/DataStructures/: HuffmanTree.py  MemberManager.py  PermissionManager.py
Hydrogen/Encrypt/: aes.py
Hydrogen/Namedpipe/: _windows.py  linux_or_mac.py  windows.py
Hydrogen/Resources/zconsole/: remote_console_client.py
Hydrogen/SES/: __init__.py
Hydrogen/TypeFunc/: Func.py  Template.py  list.py
Hydrogen/Win32Window/: __init__.py
qzlib/: __init__.py  _ostruct.py  _qstruct.old.py  setup.py  zFileSystemMapper.py  zauth.py  zdatabase.py  zdatabaseX.py  zfilex.py  zhash.py  zimport_func.py  zlibcon.py  znetwork.py  zother.py  zout.py  zpath.py  zprocessx.py  zshell.py  zsimplepipe.py  zstruct.py  zsystem.py  ztest.py  zthread.py  ztime.py  zwindow.py
qzlib/data_structure/: __init__.py  bplustree.py  graph.py  tree.py
qzlib/typefunc/: __init__.py  dict.py  list.py  threaLock.py
qzlib/zencrypt/: both.py  func.py
qzlib/zplugins_loader/: __init__.py  import_mode.py
src/HydrogenLib/: Auth.py  Const.py  CoroPlus.py  Database.py  DatabasePlus.py  Decorators.py  Encryio.py  EnvPlus.py  Example.py  File.py  ImportPlus.py  InteractiveCLI.py  IoAddons.py  Json.py  JsonFile.py  LoggingPlus.py  Network.py  OutputPlus.py  PipePlus.py  Process.py  ProcessPlus.py  QuickAiohttp.py  Signal.py  Socket.py  SocketPlus.py  SocketStructure.py  StructPlus.py  SysPlus.py  TestManager.py  ThreadingPlus.py  Time.py  WinregPlus.py  _BaseStruct.py  _PlatFormGetter.py  __about__.py  __init__.py  _error_hook.py  _qstruct.old.py
src/HydrogenLib/BoardcastRoom/: _packages.py  errors.py  socket.py
src/HydrogenLib/Class/: Auto.py  Base.py  MemberManager.py  PermissionManager.py  ProbabilityCounter.py  Version.py  __init__.py
src/HydrogenLib/Classes/: Auto.py  Base.py  MemberManager.py  NetworkPackages.py  Null.py  Version.py  __init__.py
src/HydrogenLib/DataStructure/: HuffmanTree.py  Tree.py  __init__.py
src/HydrogenLib/DataStructures/: Graph.py  MemberManager.py  PermissionManager.py  __init__.py
src/HydrogenLib/Doc/: Struct.py
src/HydrogenLib/Encrypt/: __init__.py
src/HydrogenLib/EnhanceToml/: __init__.py  _expression_parser.py  _literal_eval.py  _toml_types.py  _writer.py
src/HydrogenLib/HyConfigLanguage/: __init__.py
src/HydrogenLib/HyDownloader/: UnitConversion.py  _Base.py
src/HydrogenLib/InteractiveCLI/: __init__.py  _base.py  _menu.py
src/HydrogenLib/Json/: __init__.py
src/HydrogenLib/Namedpipe/: __init__.py  linux_or_mac.py  windows.py
src/HydrogenLib/REPlus/: REConcatenater.py
src/HydrogenLib/Resource/: version
src/HydrogenLib/Resources/: version
src/HydrogenLib/SampleData/: __init__.py
src/HydrogenLib/TestManager/: _BaseStructures.py  _ConfigCreator.py  _ConfigLoader.py  __init__.py  _manager.py
src/HydrogenLib/TypeFunc/: LiteralEval.py  __init__.py  binaryTree.py  dict.py  func.py  list.py  number.py
src/HydrogenLib/Win32Window/: win32.py
src/hydrolib/: __about__.py  __error_hook.py  __init__.py  _qstruct.old.py  auth.py  auto_struct.py  coro_plus.py  database.py  decorators.py  encryio.py  example.py  hash.py  import_plus.py  json_file.py  ospipe.py  output_methods.py  path.py  process.py  process_addons.py  socket.py  socket_plus.py  struct_plus.py  sys_plus.py
src/hydrolib/Encrypt/: aes.py  func.py
src/hydrolib/HyDownloader/: TaskManager.py  UnitConversion.py  _Base.py
src/hydrolib/HyStruct/: __init__.py
src/hydrolib/Json/: Json.py  Pickle.py
src/hydrolib/Namedpipe/: __init__.py  _windows.py  linux_or_mac.py  windows.py
src/hydrolib/boardcast_room/: _packages.py  socket.py
src/hydrolib/codedoc/: Struct.py
src/hydrolib/data_structures/: BplusTree.py  Graph.py  HuffmanTree.py  __init__.py
src/hydrolib/re_plus/: __init__.py  _reconcatenater_abc.py
src/hydrolib/socket_structure/: __init__.py
src/hydrolib/test_manager/: _BaseStructures.py  _ConfigLoader.py  _manager.py
src/hydrolib/type_func/: Bitmap.py  Func.py  (+7 more)
tests/: __init__.py  test_funcs.py
tests/test_configs/: Classes.Namespace.Namespace.json
(+50 files in other folders)
