[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hydrogenlib"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "SongzqInChina", email = "142714722+SongzqInChina@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/SongzqInChina/hydrogenlib#readme"
Issues = "https://github.com/SongzqInChina/hydrogenlib/issues"
Source = "https://github.com/SongzqInChina/hydrogenlib"

[tool.hatch.version]
path = "src/hydrogenlib/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/hydrogenlib tests}"

[tool.coverage.run]
source_pkgs = ["hydrogenlib", "tests"]
branch = true
parallel = true
omit = [
  "src/hydrogenlib/__about__.py",
]

[tool.coverage.paths]
hydrogenlib = ["src/hydrogenlib", "*/hydrogenlib/src/hydrogenlib"]
tests = ["tests", "*/hydrogenlib/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
