[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "HydrogenLib"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.7.0"
keywords = []
authors = [
    { name = "SongzqInChina", email = "idesong6@qq.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "jsonpickle >= 3.3.0",
    "pywin32 >= 306",
    "pyaes >= 1.6.0",
    "rsa >= 4.9",
    "psutil >= 6.0.0",
    "rich >= 13.6.0",
    "ping3 >= 4.0.0"
]

[project.urls]
Documentation = "https://github.com/SongzqInChina/HydrogenLib#readme"
Issues = "https://github.com/SongzqInChina/HydrogenLib/issues"
Source = "https://github.com/SongzqInChina/HydrogenLib"


[tool.hatch.version]
path = "src/hydrolib/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
    "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/hydrolib tests}"

[tool.coverage.run]
source_pkgs = ["hydrolib", "tests"]
branch = true
parallel = true
omit = [
    "src/hydrolib/__about__.py",
]

[tool.coverage.paths]
hydrolib = ["src/hydrolib", "*/hydrolib/src/hydrolib"]
tests = ["tests", "*/hydrolib/tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
[tool.hatch.build]
target = "wheel"

[tool.hatch.build.targets.wheel]
packages = ['src/hydrolib']
